# 2026-aina-flow-transfer-al

./: .gitignore  README.md  pyproject.toml
flc/flows/dataset/: __init__.py  config.py  dataset.py  split.py  subsample.py
flc/flows/experiments/active-learning/: active-learning-classifier.py  active-learning-cluster.py
flc/flows/experiments/cluster/: cluster-eps.py
flc/flows/experiments/transfer/: transfer.py
flc/flows/experiments/transfer_active_learning/: shared.py  tae-classifier.py  tae-cluster-w-source.py  tae-cluster.py
flc/flows/feature_extraction/: __init__.py  flow_summary.py  flow_tcp_state.py  helpers.py
flc/flows/labeling/: __init__.py  label_flow.py  rules.py
flc/flows/labels/: __init__.py  flow_labels.py  group_labels.py  label_source.py  label_type.py
flc/flows/scripts/classification_evaluation/: __init__.py  config.py  evaluation_executor.py  report_manager.py  run.py
flc/flows/scripts/classification_sweeps/: __init__.py  classification_executor.py  config.py  dataset_loader.py  evaluation_computer.py  report_manager.py  run.py  sweep_generator.py
flc/flows/scripts/classifier_transfer_al_sweeps/: __init__.py  (+5 more)
flc/shared/classification/: __init__.py  base.py  evaluation.py  factory.py
flc/shared/clustering/: __init__.py  base.py  evaluation.py  factory.py  utils.py
flc/shared/pcaps/: __init__.py  get_pcaps.py  tshark.py
flc/shared/preprocessing/: __init__.py  config.py  fit_preprocessor.py  preprocessor.py
flc/shared/transfer_active_learning/: __init__.py  base.py
flc/shared/utils/: numpy_helpers.py  numpy_helpers_test.py
(+67 files in other folders)
